gateway-api/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: leave-system-nginx
  namespace: default
spec:
  controllerName: k8s.io/ingress-nginx
